--- a/jbpm-elasticsearch-persistence/pom.xml
+++ b/jbpm-elasticsearch-persistence/pom.xml
@@ -52,5 +52,17 @@
 			<artifactId>jbpm-elasticsearch-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<!-- Test Dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+	 	</dependency>
+	 	<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
